--- a/packages/web3-eth/package.json
+++ b/packages/web3-eth/package.json
@@ -36,12 +36,12 @@
 		"test": "jest --config=./test/unit/jest.config.js",
 		"test:coverage:unit": "jest --config=./test/unit/jest.config.js --coverage=true --coverage-reporters=text",
 		"test:ci": "jest --coverage=true --coverage-reporters=json --verbose",
-		"test:e2e:mainnet": "jest --config=./test/e2e/jest.config.js --forceExit",
-		"test:e2e:sepolia": "jest --config=./test/e2e/jest.config.js --forceExit",
+		"test:e2e:mainnet": "jest --config=./test/e2e/jest.config.js",
+		"test:e2e:sepolia": "jest --config=./test/e2e/jest.config.js",
 		"test:watch": "npm test -- --watch",
 		"test:unit": "jest --config=./test/unit/jest.config.js",
 		"test:integration": "jest --config=./test/integration/jest.config.js --runInBand",
-		"test:coverage:integration": "jest --config=./test/integration/jest.config.js --runInBand --forceExit --coverage=true --coverage-reporters=text",
+		"test:coverage:integration": "jest --config=./test/integration/jest.config.js --runInBand --coverage=true --coverage-reporters=text",
 		"test:e2e:electron": "npx cypress run --headless --browser electron",
 		"test:e2e:chrome": "npx cypress run --headless --browser chrome",
 		"test:e2e:firefox": "npx cypress run --headless --browser firefox"
