--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,10 @@ on:
             - '4.x'
         tags:
             - v4*
-    pull_request:
-        branches:
-            - '4.x'
-        types: [opened, reopened, synchronize]
+    # pull_request:
+    #     branches:
+    #         - '4.x'
+    #     types: [opened, reopened, synchronize]
 
 jobs:
     build:
