--- a/.github/workflows/e2e_network_tests.yml
+++ b/.github/workflows/e2e_network_tests.yml
@@ -6,11 +6,11 @@ on:
         tags:
             - v4.*
 
-#    For test purpose only:
-#    pull_request:
-#        branches:
-#            - '4.x'
-#        types: [ opened, reopened, synchronize ]
+    pull_request:
+        branches:
+            - '4.x'
+        types: [opened, reopened, synchronize]
+
 jobs:
     build:
         name: Build Packages
